--- a/utils/Makefile
+++ b/utils/Makefile
@@ -3,7 +3,7 @@ PCAP_DIR = pcaps
 LOG_DIR = logs
 
 P4C = p4c-bm2-ss
-P4C_ARGS += --p4runtime-files $(BUILD_DIR)/$(basename $@).p4.p4info.txt
+P4C_ARGS += --p4runtime-files $(basename $@).p4.p4info.txt
 
 RUN_SCRIPT = ../../utils/run_exercise.py
 
@@ -11,13 +11,14 @@ ifndef TOPO
 TOPO = topology.json
 endif
 
-source = $(../../P4_code/wildcard *.p4)
+source = ../../P4_code/compare_dht_rewrite.p4
+#source = ../../P4_code/compare_dht_forward.p4
 compiled_json := $(source:.p4=.json)
 
 ifndef DEFAULT_PROG
-DEFAULT_PROG = $(../../P4_code/wildcard *.p4)
+DEFAULT_PROG = $(../P4_code/wildcard *.p4)
 endif
-DEFAULT_JSON = $(BUILD_DIR)/$(DEFAULT_PROG:.p4=.json)
+DEFAULT_JSON = $(compiled_json)
 
 # Define NO_P4 to start BMv2 without a program
 ifndef NO_P4
