update file structure

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -41,7 +41,7 @@ stop:
 build: dirs $(compiled_json)
 
 %.json: %.p4
-	$(P4C) --p4v 16 $(P4C_ARGS) -o $(BUILD_DIR)/$@ $<
+	$(P4C) --p4v 16 $(P4C_ARGS) -o $@ $<
 
 dirs:
 	mkdir -p $(BUILD_DIR) $(PCAP_DIR) $(LOG_DIR)
