--- a/initialize_system/No_hop_rewrite_0/Makefile
+++ b/initialize_system/No_hop_rewrite_0/Makefile
@@ -1,3 +1,4 @@
-BMV2_SWITCH_EXE = simple_switch_grpc 
-TOPO = ./topology.json 
-include ../../utils/Makefile 
+BMV2_SWITCH_EXE = simple_switch_grpc
+TOPO = ./topology.json
+source = ../../P4_code/compare_dht_rewrite.p4
+include ../../utils/Makefile
