--- a/initialize_system/No_hop_forward_0/Makefile
+++ b/initialize_system/No_hop_forward_0/Makefile
@@ -1,4 +1,4 @@
-BMV2_SWITCH_EXE = simple_switch_grpc 
-TOPO = ./topology.json 
-source = ../../P4_code/compare_dht_forward.p4
-include ../../utils/Makefile 
+BMV2_SWITCH_EXE = simple_switch_grpc
+TOPO = ./topology.json
+SOURCE = ../../P4_code/compare_dht_forward.p4
+include ../../utils/Makefile
