--- a/utils/Makefile
+++ b/utils/Makefile
@@ -15,7 +15,7 @@ ifndef SOURCE
 SOURCE = ../../P4_code/compare_dht_rewrite.p4
 #SOURCE= ../../P4_code/compare_dht_forward.p4
 endif
-compiled_json := $(source:.p4=.json)
+compiled_json := $(SOURCE:.p4=.json)
 
 ifndef DEFAULT_PROG
 DEFAULT_PROG = $(../P4_code/wildcard *.p4)
