--- a/utils_tmp/Makefile
+++ b/utils_tmp/Makefile
@@ -11,9 +11,11 @@ ifndef TOPO
 TOPO = topology.json
 endif
 
-source = ../../P4_code/compare_dht_rewrite.p4
-#source = ../../P4_code/compare_dht_forward.p4
-compiled_json := $(source:.p4=.json)
+ifndef SOURCE
+SOURCE = ../../P4_code/compare_dht_rewrite.p4
+#SOURCE= ../../P4_code/compare_dht_forward.p4
+endif
+compiled_json := $(SOURCE:.p4=.json)
 
 ifndef DEFAULT_PROG
 DEFAULT_PROG = $(../P4_code/wildcard *.p4)
